myteo/test/analyze/type_check/traits/incorrect_overridden_function_type_param_arity_errors.myte
module test

// Error on incorrect function parameter arity
trait Trait1 {
  fun foo<T>(x: T)
}
trait Trait2 {
  extends Trait1
  override fun foo<T, U>(x: T) {}
}

fun main() {}